--- a/Aplicação/ZNAP_app_frontend/znap_devchallenge/package.json
+++ b/Aplicação/ZNAP_app_frontend/znap_devchallenge/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@sweetalert2/theme-borderless": "^5.0.26",
     "axios": "^1.7.9",
     "roboto-fontface": "*",
     "sweetalert2": "^11.15.10",
